codex-vm/mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-service
spec:
  ports:
    - name: mongo-service
      port: 27017
      targetPort: 27017
  clusterIP: None
  selector:
    app: mongo-sts
